--- a/src/features/productPage/productCardSlider/DetailedCardSlider.css
+++ b/src/features/productPage/productCardSlider/DetailedCardSlider.css
@@ -34,13 +34,13 @@
   cursor: pointer;
 }
 
-.dot:focus {
+/* .dot:focus {
   outline: none;
 }
 
 .dot.active {
   background: #000;
-}
+} */
 
 .arrow {
   width: 30px;
@@ -49,7 +49,7 @@
   top: 50%;
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
-  fill: #000;
+  fill: #46A358;
   cursor: pointer;
 }
 
