--- a/src/features/productPage/productCardSlider/DetailedCardSlider.css
+++ b/src/features/productPage/productCardSlider/DetailedCardSlider.css
@@ -49,7 +49,7 @@
   top: 50%;
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
-  fill: #46A358;
+  fill: #46a358;
   cursor: pointer;
 }
 
